<resources>
    <string name="app_name">Just Java</string>
    <string name="text_button_minus">-</string>
    <string name="text_button_plus">+</string>
    <string name="text_button_confirm">Confirm order</string>
    <string name="text_checkbox_whipped_cream">Whipped cream</string>
    <string name="text_checkbox_chocolate">Chocolate</string>
    <string name="text_checkbox_ice_cream">Ice cream</string>
    <string name="text_checkbox_mint_flavour">Mint flavour</string>
    <string name="text_hint_customer_name">Customer\'s full name</string>
    <string name="text_topic_toppings">Toppings</string>
    <string name="text_topic_quantity">Quantity</string>
    <string name="text_topic_price">Price</string>
    <string name="text_topic_summary">Summary</string>
    <string name="text_coffee_factory">Coffee Factory</string>
    <string name="text_price">\u20B9\u002072.50</string>
    <string name="text_quantity">10 cups</string>
    <string name="text_summary">Thank you!</string>
    <string name="text_summary_pre_message">Summary of the order will be displayed here.</string>
    <string name="text_powered_by">Powered by #Taazgee</string>
    <string name="text_cup">cup</string>
    <string name="text_cups">cups</string>
    <string name="text_less_cup">You have reached the minimum no. of cup.</string>
    <string name="text_more_cup">You have reached the maximum no. of cups.</string>
    <string name="text_yes">Added</string>
    <string name="text_no">Not added</string>
    <string name="text_name_warning">Name field cannot be empty.</string>
    <string name="text_email_subject">Your order from Coffee Factory.</string>

    <string name="txt_os_add_name">Name : %1$s</string>
    <string name="txt_os_add_smry">\n\nYour order summary is as follow:-\n</string>
    <string name="txt_os_add_quantity">\nQuantity : %1$d %2$s</string>
    <string name="txt_os_add_price">\nTotal Price : ₹ %.2f</string>
    <string name="txt_os_add_wct">\nWhipped cream topping : %1$s</string>
    <string name="txt_os_add_ct">\nChocolate topping : %1$s</string>
    <string name="txt_os_add_ict">\nIce cream topping : %1$s</string>
    <string name="txt_os_add_mft">\nMint flavour topping : %1$s</string>
    <string name="txt_os_add_ty">\n\nYour order has been placed.\nYour order will be delivered soon.\nThank you!</string>

    <string name="txt_dsp_nmbr_frmt">%1$d %2$s</string>
    <string name="txt_dsp_prc_frmt">₹ %.2f</string>
</resources>
